# Xamativ

./: .gitignore  README.md  gerenciarDados.py  main.py  pyproject.toml  relacionamentos.py  sysInfo.py
domain/: Ativo.py  Chamado.py  Departamento.py  Endereco.py  Fornecedor.py  Usuario.py
