[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Lucas Nogueira <lucasjesusnogueira@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
domain = "^0.1.4"
psutil = "^5.9.5"
pygame = "^2.5.1"
pymake = "^0.1.1"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"